# tianji

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: bazi_reading.py  liuyao_divination.py
src/tianji/: __init__.py  __main__.py  config.py  models.py
src/tianji/api/: __init__.py  app.py  routes.py
src/tianji/bazi/: __init__.py  chart.py  day_master.py  five_elements.py  luck_pillars.py  relationships.py  ten_gods.py
src/tianji/calendar/: __init__.py  earthly_branches.py  heavenly_stems.py  lunar.py  solar_terms.py  stem_branch.py
src/tianji/liuyao/: __init__.py  analysis.py  casting.py  hexagram.py
src/tianji/llm/: __init__.py  interpreter.py  prompts.py
src/tianji/ziwei/: __init__.py  chart.py  palaces.py  stars.py
tests/test_bazi/: __init__.py  test_chart.py  test_known_dates.py  test_ten_gods.py
tests/test_calendar/: test_stem_branch.py
tests/test_liuyao/: __init__.py  test_casting.py  test_hexagram.py
tests/test_ziwei/: test_chart.py
